// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login query INVALID_ARGUMENT_AUTH fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: No authentication credentials.],
  ],
}
`;

exports[`login query INVALID_ARGUMENT_LOGIN fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: Invalid email address provided.],
  ],
}
`;

exports[`login query INVALID_LOGIN fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: Login failed.],
  ],
}
`;

exports[`login query INVALID_METHOD fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: Login has not been successful.],
  ],
}
`;
